add create user api
