# interface/request/user.go
@@ -1,0 +1,23 @@
+package request
+
+import "github.com/akubi0w1/golang-sample/code"
+
+type CreateUser struct {
+	AccountID       string `json:"accountId"`
+	Password        string `json:"password"`
+	PasswordConfirm string `json:"passwordConfirm"`
+	Name            string `json:"name"`
+	Email           string `json:"email"`
+	AvatarURL       string `json:"avatarUrl"`
+}
+
+func (req *CreateUser) Validate() error {
+	if req.AccountID == "" || req.Email == "" || req.Password == "" || req.PasswordConfirm == "" {
+		return code.Error(code.InvalidArgument, "require fields is empty")
+	}
+	if req.Password != req.PasswordConfirm {
+		return code.Error(code.BadRequest, "password not equal password confirm")
+
+	}
+	return nil
+}
